--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
         <h2>OBJETIVO MENSUAL: Mejorar la cadencia. </h2>
         <h2>FASE: Adquisición. </h2>
-        <!--<h2 id ="pageTitle">PRÓXIMA CARRERA  Valholl 85km: 2025/05/10</h2> -->
+        <h2 id ="pageTitle">PRÓXIMA CARRERA  Valholl 85km: 2025/03/21</h2> 
         <h2 id="result"></h2>         
         
     <div class="sub-container">
@@ -49,16 +49,16 @@
     <div class="column-container 1">           
         <div class="column">
             <h3>Dia 1
-            <br> Lunes: 11 km trail Paque de Montaña. </h3>
+            <br> Lunes: 11 km trail senderos corribles. </h3>
             <p> -1 km de menor a mayor por senderos bajos. </p>
-            <p> -3 km Llorón subiendo fuerte adelante + bajada por calle. </p>
-            <p> -4 Llorones por scooby + filo sur bajada rapida por calle. </p>
+            <p> -3 km ágiles. </p>
+            <p> -4 km, 40" ágiles x 40" suaves. </p>
             <p> -3 km fuertes. </p>
         </div>
         <div class="column">
             <h3>Dia 2
             <br> Miércoles mañana: 5 km calle al mejor ritmo posible. </h3>
-            <h3> Miércoles tarde: 14 km trail Arco. </h3>
+            <h3> Miércoles tarde: 14 km senderos corribles. </h3>
             <p> -2 km de mayor a menor. </p>
             <p> -4 km, 40" subiendo x 15" bajando. </p>
             <p> -4 km sensaciones incómodas en subida al límite. </p>
@@ -66,7 +66,7 @@
         </div>
         <div class="column">
             <h3>Dia 3
-            <br> Jueves: 12 km trail, Parque de Montaña "series triangulares". </h3>
+            <br> Jueves: 12 km trail (con altimetría) "series triangulares". </h3>
             <p> -2 km ágiles. </p>
             <p> -2 km, 10 series x 200m subida fuerte x pausa pasiva 1'/1'30". </p>
             <p> -2 km, 10 series x 200m bajada fuerte x  pausa pasiva 1'30"/ 2'. </p>
@@ -75,7 +75,7 @@
         </div>
         <div class="column">
             <h3>Dia 4
-            <br> Viernes: 16 km trail, Arco + Gateado por Camino del Mal Paso. </h3>
+            <br> Viernes: 16 km trail (con altimetría). </h3>
             <p> -1 km fuerte. </p>
             <p> -2 km de mayor a menor. </p>
             <p> -5 km 40" ágiles x 40" treking exigido, toque donde toque. </p>
@@ -83,21 +83,12 @@
         </div>        
         <div class="column">
             <h3>Dia 5
-            <br> Sábado: 25 km trail Arco. </h3>
-            <p> -3 km ágiles x río seco. </p>
+            <br> Sábado: 25 km trail (con altimetría). </h3>
+            <p> -3 km ágiles. </p>
             <p> -5 km, 500m fuertes x 2' suaves. </p>
             <p> -5 km, 500m fuertísimo x 1'30" suaves. </p>
             <p> -12 km bajas pulsaciones. </p>
-        </div>  
-         <div class="column">
-            <h3>Dia 6
-            <br> Lunes: 9 km pasada calle. </h3>
-            <p> -2 km de menor a mayor. </p>
-            <p> -2 km, 6x300m, subida fuerte + bajada controlada calle del Cricyt. </p>
-            <p> -1 km, 6x200m, bajada fuerte + subida controlada calle del Cricyt. </p>
-            <p> -2 km, 2x1000m, subimos fuerte descansamos 1' bajamos fuertísimo. </p>
-            <p> -2 km ágiles por calle libre. </p>
-        </div>  
+        </div>           
     </div>
 
     <div class="small-paragraph-container">
@@ -117,7 +108,7 @@
         
     <div class="sub-container">
         <h4>SEMANA 2
-        <br>Objetivo semanal: Mejora de la cadencia en subida. </h4>
+        <br>Objetivo semanal: Apretar en las subidas. </h4>
         <p>Entrada en calor </p>  
         <p> 3 vueltas x 13 repeticiones </p>
         <div class="image-container">  
@@ -137,7 +128,7 @@
     <div class="column-container 1">           
         <div class="column">
             <h3>Dia 1
-            <br> Lunes: 13 km trail, Parque de Montañan + Frías. </h3>
+            <br> Lunes: 13 km trail (con altimetría). </h3>
             <p> -2 km de menor a mayor. </p>
             <p> -3 km ágiles. </p>
             <p> -5 km, 45" ágiles x 45" suaves. </p>
@@ -146,21 +137,21 @@
         <div class="column">
             <h3>Dia 2
             <br> Martes mañana: 4 km calle, 2km ágiles x 2km fuertísimooo. </h3>
-            <h3> Martes tarde: 14 km trail senderos bajos. </h3>
+            <h3> Martes tarde: 14 km trail senderos corribles. </h3>
             <p> -3 km furtes. </p>
-            <p> -4 km, 20" fuerte x 20" suave senderos bajos. </p>
+            <p> -4 km, 20" fuertes x 20" suaves senderos bajos. </p>
             <p> -4 km subidas fuertes x bajadas controladas. </p>
             <p> -3 km buenas sensaciones. </p>
         </div>
         <div class="column">
             <h3>Dia 3        
-            <br> Jueves: 13 km trail Parque de Montaña x senderos bajos. </h3>
+            <br> Jueves: 13 km trail senderos corribles. </h3>
             <p> -3 km de menor a mayor. </p>
             <p> -10 km en el mejor tiempo posible. </p>
         </div>
         <div class="column">
             <h3>Dia 4        
-            <br> Viernes: 21 km trail Arco con 1600+. </h3>
+            <br> Viernes: 21 km trail (con altimetría). </h3>
             <p> -2 km salida fuerte. </p>
             <p> -5 km, 30" ágiles x 30" suaves. </p>
             <p> -2 km trekking exigido. </p>
@@ -168,21 +159,12 @@
         </div>
          <div class="column">
             <h3>Dia 5        
-            <br> Sábado: 26 km zona del Arco 1500+. </h3>
+            <br> Sábado: 26 km trail (con altimetría). </h3>
             <p> -3 km fuerte. </p>
             <p> -4 km, 40" subiendo x 20"  bajada. </p>
             <p> -4 km al mejor ritmo sostenido en subida. </p>
             <p> -3 km trekking fuerte. </p>
             <p> -12 km, 6km fuerte x 6km a buenas sensaciones. </p>
-        </div>
-         <div class="column">
-            <h3>Dia 6        
-            <br> Martes: 13 km Series Triangulares Parque de montaña. </h3>
-            <p> -3 km de menor a mayor, por senderos bajos. </p>
-            <p> -2 km subida fuerte x Siete Colinas, arriba descansamos 1':30". </p>
-            <p> -2 km bajada fuerte x Siete Colinas, abajo descansamos 2'. </p>
-            <p> -2 km pasada llano, dique Frías, descansamos 30" entre pasadas. </p>
-            <p> -4 km, 2km ágiles x 2km fuertes. </p>
         </div>
     </div>
 
