--- a/index.html
+++ b/index.html
@@ -157,6 +157,15 @@
             <p> -2 km trekking exigido. </p>
             <p> -12 km de menor a mayor. </p>
         </div>
+        <div class="column">
+            <h3>Dia 5        
+            <br> Sábado: 2 km trail (con Altimetría). </h3>
+            <p> -3 km fuertes. </p>
+            <p> -4 km, 40" agiles x 20" bajada. </p>
+            <p> -4 km el mejor ritmo sostenido en subida. </p>
+            <p> -3 km trekking exigido. </p>
+            <p> -12 km, 6km fuertes x 6km a buenas sensaciones. </p>
+        </div>
     </div>
 
     <div class="small-paragraph-container">
