--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           
     <div id="column-container 2">
         <canvas id="myChart-line-2"></canvas>
-        </div> -->
+        </div>
 
 </div>
 <script src="script.js"></script>
