--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
         <h2>OBJETIVO MENSUAL: Mejorar la cadencia. </h2>
         <h2>FASE: Adquisición. </h2>
-        <h2 id ="pageTitle">PRÓXIMA CARRERA  Valholl 85km: 2025/03/21</h2> 
+        <h2 id ="pageTitle">PRÓXIMA CARRERA Valholl 85km: 2025/03/21.</h2> 
         <h2 id="result"></h2>         
         
     <div class="sub-container">
