--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <p> -15 km bajas pulsaciones. </p>
         </div>
         <div class="column">
-            <h3>Dia 5 (Cristian y Mati)       
+            <h3>Dia 5       
             <br> Sábado: 17 km trail (con Altimetría).</h3>
             <p> -3 km de menor a mayor. </p>
             <p> -12 km mejor ritmo posible. </p>
