--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <h2 id="result"></h2>         
         
     <div class="sub-container">
-         <h4>SEMANA 11 
-            <br>Objetivo semanal: Apretar en los llanos y los falsos llanos.  </h4>
+         <h4>SEMANA 13 
+            <br>Objetivo semanal: Apretar en las bajadas.  </h4>
         <p>Entrada en calor </p>   
         <p>4 vueltas x 14 repeticiones </p>
         <div class="image-container">  
@@ -49,48 +49,55 @@
     <div class="column-container 1">           
         <div class="column">
             <h3>Dia 1
-            <br> Lunes: 13 km trail senderos corribles. </h3>
-            <p> -4 km de menor a mayor. </p>
-            <p> -4 km, 100m ágiles x 100m suaves. </p>
+            <br> Lunes: 15 km trail (con altimetría). </h3>
+            <p> -2 km fuertes. </p>
+            <p> -4 km, 20" fuertes x 20" ágiles. </p>
             <p> -5 km buenas sensaciones. </p>
+            <p> -4 km, 5' fuertes x 2' suaves. </p>
             <audio controls>
             <source src="Audio1.ogg" type="audio/ogg">
             <source src="Audio1.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 2
-            <br> Martes: 11 km calle. </h3>
-            <p> -2 km fuertes. </p>
+            <br> Martes mañana: 4 km calle por debajo de 4:50. </h3>
+            <h3> Martes tarde: 12 km trail senderos corribles. </h3>
+            <p> -4 km suaves. </p>
+            <p> -4 km fuertes. </p>
             <p> -4 km ágiles. </p>
-            <p> -5 km, 3' fuertes x 2' suaves. </p>
             <audio controls>
             <source src="Audio2.ogg" type="audio/ogg">
             <source src="Audio2.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 3
-            <br> Jueves: 12 km calle. </h3>
+            <br> Jueves: 15 km calle, pasadas. </h3>
             <p> -2 km fuertes. </p>
-            <p> -5 km, 20" ágiles x 20" suaves. </p>
-            <p> -5 km de menor a mayor. </p>
+            <p> -5 km, 600m fuertes x 300m suaves. </p>
+            <p> -4 km, 300m fuertísimo x 400m suaves. </p>
+            <p> -4 kmmejor ritmo posible . </p>
             <audio controls>
             <source src="Audio3.ogg" type="audio/ogg">
             <source src="Audio3.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 4
-            <br> Viernes: 15 km trail senderos corribles. </h3>
-            <p> -3 km de menor a mayor. </p>
-            <p> -12 km al mejor ritmo posible. </p>
+            <br> Viernes: 11 km trail, senderos corribles. </h3>
+            <p> -3 km fuertes. </p>
+            <p> -5 km, 5' ágiles x 3' fuertes x 3' suaves. </p>
+            <p> -3 km al mejor ritmo posible. </p>
             <audio controls>
             <source src="Audio4.ogg" type="audio/ogg">
             <source src="Audio4.mp3" type="audio/mpeg">
         </div>        
         <div class="column">
             <h3>Dia 5
-            <br> Sábado: 25 km trail (con altimetría). </h3>
-            <p> -25 km completar los 25km con 1200+ en 2:50hs. </p>
-            <p> -salida fuertes. </p>   
+            <br> Sábado: 19 km trail (con Altimetria)"con bastones". </h3>
+            <p> -2 km de mneor a mayor. </p>
+            <p> -3 km, 30" ágiles x 30" suaves. </p>
+            <p> -5 km, 5 series x 1000m en subida con bastones fuerte x 1'40" pausa pasiva. </p>
+            <p> -5 km, 5 series x 1000m en bajada de menor a mayor x 1'20" pausa pasiva. </p>
+            <p> -4 km mejor ritmo posible. </p>
             <audio controls>
             <source src="Audio5.ogg" type="audio/ogg">
             <source src="Audio5.mp3" type="audio/mpeg">
@@ -99,7 +106,7 @@
 
     <div class="small-paragraph-container">
         <p> Método de recuperación </p>
-        <p> - Elongación de glúteo medio (12 series x 26 ejercicios x 9 descanso). </p>
+        <p> - Movilidad de cadera bipodal (4 series x 13 repeticiones). </p>
     </div>
 
     <div class="image-container">  
@@ -113,10 +120,10 @@
     </div>
         
     <div class="sub-container">
-        <h4>SEMANA 12
-        <br>Objetivo semanal: Apretar en las bajadas. </h4>
+        <h4>SEMANA 14
+        <br>Objetivo semanal: Sostener cadencia en subida. </h4>
         <p>Entrada en calor </p>  
-        <p> 34 vueltas x 13 repeticiones </p>
+        <p> 4 vueltas x 14 repeticiones </p>
         <div class="image-container">  
             <video width="100%" class="responsive-video" style="margin-top: 35px;" controls>            
             <source src="Video4.mp4" type="video/mp4">
@@ -135,55 +142,50 @@
         <div class="column">
             <h3>Dia 1
             <br> Lunes: 12 km trail senderos corribles. </h3>
-            <p> -2 km de menor a mayor. </p>
-            <p> -6 km, 30" ágiles x 30" suaves. </p>
-            <p> -4 km buenas sensanciones. </p>
+            <p> -2 km fuertes. </p>
+            <p> -6 km, 20" fuertes x 20" ágiles. </p>
+            <p> -4 km buenas sensaciones. </p>
             <audio controls>
             <source src="Audio6.ogg" type="audio/ogg">
             <source src="Audio6.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 2
-            <br> Martes mañana: 4 km calle por debajo de 4. </h3>
-            <h3> Martes tarde: 14 km trail senderos corribles. </h3>
-            <p> -1 km de menor a mayor. </p>
-            <p> -4 km mejor ritmo posible. </p>
-            <p> -5 km, 3' suaves x 2' fuertes. </p>
-            <p> -4 km buenas sensaciones. </p> 
+            <br> Martes mañana: 4 km calle, por debajo de 4:45. </h3>
+            <h3> Martes tarde: 10 km trail senderos corribles. </h3>
+            <p> -3 km suaves. </p>
+            <p> -4 km fuertes. </p>
+            <p> -3 km ágiles. </p>
             <audio controls>
             <source src="Audio7.ogg" type="audio/ogg">
             <source src="Audio7.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 3        
-            <br> Jueves: 15 km trail mixto. </h3>
-            <p> -3 km ágiles. </p>
-            <p> -6 km, 40" suaves x 40" fuertes. </p>
-            <p> -6 km bajas pulsaciones. </p>
+            <br> Jueves: 11 km calle. </h3>
+            <p> -11 km bajas pulsaciones. </p>
             <audio controls>
             <source src="Audio8.ogg" type="audio/ogg">
             <source src="Audio8.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 4        
-            <br> Viernes: 13 km trail senderos con altimetria "series triangulares". </h3>
-            <p> -2 km ágiles. </p>
-            <p> -4 km, 20 series x 200m subida fuerte + 1' pausa pasiva.</p>
-            <p> -4 km, 20 series x 200m bajada fuerte + 2' pausa pasiva. </p>
-            <p> -3 km, 10 series x 300m plano fuerte + 30" pausa pasiva. </p>
-            <p> -3 km bajas pulsaciones. </p> 
+            <br> Viernes: 18 km trail senderos corribles. </h3>
+            <p> -2 km ágiles por senderos bajos. </p>
+            <p> -6 km bajas pulsaciones. </p>
+            <p> -10 km, 3' fuerte x 2' suaves. </p>
+            <p> - km . </p>
             <audio controls>
             <source src="Audio9.ogg" type="audio/ogg">
             <source src="Audio9.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 5        
-            <br> Sábado: 26 km trail (con Altimetría). </h3>
-            <p> -3 km de menor a mayor. </p>
-            <p> -4 km, 300m fuertes x 100m suaves x 100m trekking exigido. </p>
-            <p> -5 km buenas sensaciones. </p>
-            <p> -5 km, 20" ágiles x 20" suaves. </p>
-            <p> -9 km sensaciones incómodas, priorizar la buena técnica de carrera. </p>            
+            <br> Sábado: 20 km trail (con altimetría). </h3>
+            <p> -3 km ágiles. </p>
+            <p> -9 km subir fuertes y bajar ágil. </p>
+            <p> -5 km bajas pulsaciones. </p>
+            <p> -2 km fuertísimooo. </p>           
             <audio controls>
             <source src="Audio10.ogg" type="audio/ogg">
             <source src="Audio10.mp3" type="audio/mpeg">
