--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <div class="column-container 1">           
         <div class="column">
             <h3>Dia 1
-            <br> Lunes: 13 km trail mixto, Parque San Martín + Parque Montaña. </h3>
+            <br> Lunes: 13 km trail mixto. </h3>
             <p> -2 km de menor a mayor. </p>
             <p> -4 km calle, 1000m suaves x 1000m ágiles. </p>
             <p> -5 km, 2.5 km fuertes x 2.5 suaves. </p>
@@ -148,8 +148,8 @@
         </div>
         <div class="column">
             <h3>Dia 2
-            <br> Martes mañana: 6 km trail Parque de Montaña, en el mejor tiempo posible. </h3>
-            <h3> Martes tarde: 12 km trail Arco. </h3>
+            <br> Martes mañana: 6 km trail senderos corribles, en el mejor tiempo posible. </h3>
+            <h3> Martes tarde: 12 km trail con altimetría. </h3>
             <p> -3 km de mayor a menor. </p>
             <p> -3 km, 15" fuertes x 15" ágiles. </p>
             <p> -3 km, 3' de subida fuertes x 1' bajada fuertes. </p>
