--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <p> -3 km, 2' fuertes x 4' suaves x 1' agil. </p>
             <p> -3 km pulsaciones bajas. </p>
             <p> -2 km buenas sensaciones. </p>
+              <audio controls>
             <source src="Audio2.ogg" type="audio/ogg">
             <source src="Audio2.mp3" type="audio/mpeg">
         </div>
