--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <p> -5 km, 300m fuerte x 200m suaves, donde nos toque. </p>
             <p> -5 km buenas sensaciones x distintas subidas y bajadas. </p>
             <p> -4 km bajas pulsaciones. </p>
+              <audio controls>
             <source src="Audio2.ogg" type="audio/ogg">
             <source src="Audio2.mp3" type="audio/mpeg">
         </div>
