--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="column">
             <h3>Dia 2
             <br> Martes mañana: 10 km trail por senderos corribles y calles en fasos llanos en el mejor ritmo posible. </h3>
-            <h3> Martes tarde: 17 km trail (con Altimetría). </h>
+            <h3> Martes tarde: 17 km trail (con Altimetría). </h3>
             <p> -3 km ágiles. </p>
             <p> -5 km, 300m fuerte x 200m suaves, donde nos toque. </p>
             <p> -5 km buenas sensaciones x distintas subidas y bajadas. </p>
