--- a/index.html
+++ b/index.html
@@ -15,12 +15,8 @@
     </head>
 <body>
 <div class="container">
-    <div class="main-container">
-        <div class="column-container 1">     
-            <img class="imagen-chica" src="Montaña blanco.png" alt="Montaña Blanco">
-            </div>
-        <div class="column-container 2">     
-            <h1><br><br>PROGRAMA DE ENTRENAMIENTO GDE <br> TRAIL RUNNING <br>Alumno: Paula Ríos</h1>
+    <div class="sub-container">
+            <h1>GDE TRAIL RUNNING <br> Alumno: Paula Ríos </h1>
             </div>
     </div>
         <h2>OBJETIVO MENSUAL: Mejorar la cadencia. </h2>
@@ -53,9 +49,7 @@
             <p> -3 km suave. </p>
             <p> -8 km bajas pulsaciones. </p>
             <p> -3 km fuerte. </p>     
-           <audio controls> 
             <audio controls>
-            <source src="Audio1.ogg" type="audio/ogg">
             <source src="Audio1.mp3" type="audio/mpeg">
         </div>
         <div class="column">
@@ -67,7 +61,6 @@
             <p> -4 km de menor a mayor. </p>
             <p> -4 km fuertes. </p>            
            <audio controls> 
-            <source src="Audio2.ogg" type="audio/ogg">
             <source src="Audio2.mp3" type="audio/mpeg">
         </div>
         <div class="column">
@@ -79,8 +72,6 @@
             <p> -4 km mejor ritmo posible. </p>
             <p> -3 km buenas sensaciones. </p>            
            <audio controls> 
-            <audio controls>
-            <source src="Audio3.ogg" type="audio/ogg">
             <source src="Audio3.mp3" type="audio/mpeg">
         </div>
         <div class="column">
@@ -91,8 +82,6 @@
             <p> -3 km bajas pulsaciones. </p>
             <p> -3 km de menor a mayor. </p>            
            <audio controls> 
-            <audio controls>
-            <source src="Audio4.ogg" type="audio/ogg">
             <source src="Audio4.mp3" type="audio/mpeg">
         </div>        
         <div class="column">
@@ -103,8 +92,6 @@
             <p> -4 km fuertes. </p>
             <p> -3 km buenas sensaciones. </p>            
            <audio controls> 
-            <audio controls>
-            <source src="Audio5.ogg" type="audio/ogg">
             <source src="Audio5.mp3" type="audio/mpeg">
         </div>        
     </div>
@@ -151,8 +138,6 @@
             <p> -4 km bajas pulsaciones. </p>
             <p> -4 km, 400m fuertes x 200m suave. </p>
            <audio controls> 
-            <audio controls>
-            <source src="Audio6.ogg" type="audio/ogg">
             <source src="Audio6.mp3" type="audio/mpeg">
         </div>
         <div class="column">
@@ -162,9 +147,7 @@
             <p> -3 km ágiles. </p>
             <p> -2 km, 20" ágiles x 20" suaves. </p>
             <p> -2 km de menor a mayor. </p>
-           <audio controls> 
-            <audio controls>
-            <source src="Audio7.ogg" type="audio/ogg">
+           <audio controls>  
             <source src="Audio7.mp3" type="audio/mpeg">
         </div>
         <div class="column">
@@ -174,9 +157,7 @@
             <p> -3 km fuertes. </p>
             <p> -4 km ágiles. </p>
             <p> -4 km, 15" fuertes x 15" suave. </p>
-           <audio controls> 
-            <audio controls>
-            <source src="Audio8.ogg" type="audio/ogg">
+           <audio controls>  
             <source src="Audio8.mp3" type="audio/mpeg">
         </div>
         <div class="column">
@@ -186,8 +167,7 @@
             <p> -3 km bajas pulsaciones. </p>
             <p> -2 km, 300m fuertes x 100m suave. </p>
             <p> -3 km mejor ritmo posible. </p>            
-            <audio controls>
-            <source src="Audio9.ogg" type="audio/ogg">
+            <audio controls> 
             <source src="Audio9.mp3" type="audio/mpeg">
         </div>
         <div class="column">
@@ -199,9 +179,7 @@
             <p> -parada técnica para cargar agua y comer maximo 2'. </p>            
             <p> -3 km, 20" fuerte x 20" suave. </p>
             <p> -3 km buenas sensaciones. </p>            
-           <audio controls> 
-            <audio controls>
-            <source src="Audio10.ogg" type="audio/ogg">
+           <audio controls>  
             <source src="Audio10.mp3" type="audio/mpeg">
         </div>
     </div>
@@ -225,3 +203,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
