--- a/index.html
+++ b/index.html
@@ -195,12 +195,17 @@
         </video>    
     </div> 
           
-    <div id="column-container 2">
+   <div id="column-container 1">
         <canvas id="myChart-line-2"></canvas>
         </div>
 
 </div>
 <script src="script.js"></script>
+
+</div> 
+<img class="" src="logo gde blanco horizontal.png" alt="Blanco">     
 </body>
 </html>
+
+
 
