--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 <div class="container">
     <div class="sub-container">
-            <h1>GDE TRAIL RUNNING <br> Alumno: Paua Rios. </h1>
+            <h1>GDE TRAIL RUNNING <br> Alumno: Paula Rios. </h1>
             </div>
         <h2>OBJETIVO MENSUAL: Mejorar la cadencia. </h2>
         <h2>FASE: Adquisición . </h2>
@@ -50,7 +50,6 @@
             <p> -4 km, 400m fuertes x 200m suave. </p>
             <p> -2 km buenas sensaciones. </p>
             <audio controls>
-            <source src="Audio1.ogg" type="audio/ogg">
             <source src="Audio1.mp3" type="audio/mpeg">
         </div>
         <div class="column">
@@ -61,7 +60,6 @@
             <p> -3 km, 20" ágiles x 20" suaves. </p>
             <p> -3 km de menor a mayor. </p>
             <audio controls>
-            <source src="Audio2.ogg" type="audio/ogg">
             <source src="Audio2.mp3" type="audio/mpeg">
         </div>
         <div class="column">
@@ -72,7 +70,6 @@
             <p> -6 km, 15" fuertes x 15" suave. </p>
             <p> -3 km buenas sensaciones. </p>
             <audio controls>
-            <source src="Audio3.ogg" type="audio/ogg">
             <source src="Audio3.mp3" type="audio/mpeg">
         </div>
         <div class="column">
@@ -83,7 +80,6 @@
             <p> -4 km, 300m fuertes x 100m suave. </p>
             <p> -2 km mejor ritmo posible. </p>
             <audio controls>
-            <source src="Audio4.ogg" type="audio/ogg">
             <source src="Audio4.mp3" type="audio/mpeg">
         </div>        
         <div class="column">
@@ -96,7 +92,6 @@
             <p> -4 km, 20" fuerte x 20" suave. </p>
             <p> -5 km buenas sensaciones. </p>
             <audio controls>
-            <source src="Audio5.ogg" type="audio/ogg">
             <source src="Audio5.mp3" type="audio/mpeg">
         </div>        
     </div>
@@ -144,7 +139,6 @@
             <p> -4 km, 400m fuertes x 200m suave. </p>
             <p> -2 km buenas sensaciones. </p>
             <audio controls>
-            <source src="Audio6.ogg" type="audio/ogg">
             <source src="Audio6.mp3" type="audio/mpeg">
         </div>
         <div class="column">
@@ -155,7 +149,6 @@
             <p> -10 km bajas pulsaciones. </p>
             <p> -5 km suaves. </p>
             <audio controls>
-            <source src="Audio7.ogg" type="audio/ogg">
             <source src="Audio7.mp3" type="audio/mpeg">
         </div>
         <div class="column">
@@ -167,7 +160,6 @@
             <p> -4 km, 800m ágiles x 40" trote suave. </p>
             <p> -2 km buenas sensaciones. </p>
             <audio controls>
-            <source src="Audio8.ogg" type="audio/ogg">
             <source src="Audio8.mp3" type="audio/mpeg">
         </div>
         <div class="column">
@@ -179,7 +171,6 @@
             <p> -3 km ágiles. </p>
             <p> -3 km buenas sensaciones. </p>
             <audio controls>
-            <source src="Audio9.ogg" type="audio/ogg">
             <source src="Audio9.mp3" type="audio/mpeg">
         </div>
         <div class="column">
@@ -189,7 +180,6 @@
             <p> -18 km bajas pulsaciones. </p>
             <p> -5 km de menor a mayor. </p>
             <audio controls>
-            <source src="Audio10.ogg" type="audio/ogg">
             <source src="Audio10.mp3" type="audio/mpeg">
         </div>
     </div>
@@ -216,3 +206,4 @@
 <img class="" src="logo gde blanco horizontal.png" alt="Blanco">     
 </body>
 </html>
+
