--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <h2 id="result"></h2>         
         
     <div class="sub-container">
-         <h4>SEMANA 28
-            <br>Objetivo semanal: Apretar en los bajadas.  </h4>
+         <h4>SEMANA 30
+            <br>Objetivo semanal: Buscar prolijidad en la cadencia.  </h4>
         <p>Entrada en calor </p>   
-        <p>4 vueltas x 12 repeticiones </p>
+        <p>3 vueltas x 13 repeticiones </p>
         <div class="image-container">  
             <video width="100%" class="responsive-video" style="margin-top: 35px;" controls>            
                 <source src="Video1.mp4" type="video/mp4">
@@ -44,53 +44,53 @@
     <div class="column-container 1">           
         <div class="column">
             <h3>Dia 1
-            <br> Lunes: 13 km trail senderos corribles.</h3>
+            <br> Lunes: 14 km trail senderos corribles.</h3>
             <p> -3 km ágiles. </p>
-            <p> -4 km bajas pulsaciones. </p>
-            <p> -4 km, 400m fuertes x 200m suave. </p>
+            <p> -3 km fuertes. </p>
+            <p> -6 km bajas pulsaciones. </p>
             <p> -2 km buenas sensaciones. </p>
             <audio controls>
             <source src="Audio1.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 2
-            <br> Martes mañana: 5 km calle, por debajo de 3:40. </h3>
-            <h3> Martes tarde: 10 km trail (con Altimetría) .</h3>
-            <p> -4 km ágiles. </p>
-            <p> -3 km, 20" ágiles x 20" suaves. </p>
-            <p> -3 km de menor a mayor. </p>
+            <br> Martes mañana: 5 km calle en el menor tiempo posible. </h3>
+            <h3> Martes tarde: 14 km trail (con Altimetría).</h3>
+            <p> -2 km ágiles. </p>
+            <p> -6 km, 20" ágiles x 20" suaves. </p>
+            <p> -6 km de menor a mayor. </p>
             <audio controls>
             <source src="Audio2.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 3
-            <br> Jueves: 16 km trail senderos corribles.</h3>
-            <p> -3 km fuertes. </p>
-            <p> -4 km ágiles
-            <p> -6 km, 15" fuertes x 15" suave. </p>
-            <p> -3 km buenas sensaciones. </p>
+            <br> Jueves mañana: 8 km calle al mejor ritmo posible en Parque San Martín.</h3>
+            <h3> Jueves tarde: 15 km trail senderos corribles. </h3>
+            <p> -2 km fuertes. </p>
+            <p> -4 km, 20" fuertes x 20" suaves. </p>
+            <p> -4 km suaves. </p>
+            <p> -5 km al mejor ritmo posible. </p>
             <audio controls>
             <source src="Audio3.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 4
-            <br> Viernes: 12 km trail senderos corribles.</h3>
-            <p> -2 km ágiles. </p>
-            <p> -4 km bajas pulsaciones. </p>
-            <p> -4 km, 300m fuertes x 100m suave. </p>
-            <p> -2 km mejor ritmo posible. </p>
+            <br> Viernes: 14 km trail senderos corribles.</h3>
+            <p> -2 km fuertes. </p>
+            <p> -4 km, 2' fuertes x 4' suaves x 1' ágil. </p>
+            <p> -2 km fuertes. </p>
+            <p> -3 km ágiles. </p>
+            <p> -3 km buenas sensaciones. </p>
             <audio controls>
             <source src="Audio4.mp3" type="audio/mpeg">
         </div>        
         <div class="column">
             <h3>Dia 5
-            <br> Sábado: 17 km trail (con Altimetría).</h3>
-            <p> -2 km fuerte. </p>
-            <p> -3 km, 30" ágiles x 30" suaves. </p>
-            <p> -3 km de mayor a menor. </p>
-            <p> -parada técnica para cargar agua y comer maximo 2'. </p>
-            <p> -4 km, 20" fuerte x 20" suave. </p>
-            <p> -5 km buenas sensaciones. </p>
+            <br> Sábado: 26 km trail (con Altimetría).</h3>
+            <p> -5 km suave. </p>
+            <p> -4 km, 40" ágiles x 40" suaves. </p>
+            <p> -5 km sensaciones incómodas. </p>
+            <p> -12 km bajas pulsaciones. </p>
             <audio controls>
             <source src="Audio5.mp3" type="audio/mpeg">
         </div>        
@@ -98,7 +98,7 @@
 
     <div class="small-paragraph-container">
         <p> Método de recuperación </p>
-        <p> -Elongación de posteriores + banco + elástico pectoral (12 series x 22 ejercicio x 10 descanso). </p>
+        <p> - Masaje de popitlio (2' x pierna). </p>
     </div>
 
     <div class="image-container">  
@@ -112,10 +112,10 @@
     </div>
         
     <div class="sub-container">
-        <h4>SEMANA 29
-        <br>Objetivo semanal: Apretar en las bajadas con pasos rápidos. </h4>
+        <h4>SEMANA 31
+        <br>Objetivo semanal: Reconocer las fortaleces y debilidades en los distintos terrenos. </h4>
         <p>Entrada en calor </p>  
-        <p> 4 vueltas x 14 repeticiones </p>
+        <p> 4 vueltas x 12 repeticiones </p>
         <div class="image-container">  
             <video width="100%" class="responsive-video" style="margin-top: 35px;" controls>            
             <source src="Video4.mp4" type="video/mp4">
@@ -133,52 +133,52 @@
     <div class="column-container 1">           
         <div class="column">
             <h3>Dia 1
-            <br> Lunes: 13 km trail senderos corribles.</h3>
+            <br> Lunes: 16 km trail senderos corribles.</h3>
             <p> -3 km ágiles. </p>
-            <p> -4 km bajas pulsaciones. </p>
-            <p> -4 km, 400m fuertes x 200m suave. </p>
-            <p> -2 km buenas sensaciones. </p>
+            <p> -5 km, 600m fuerte x 300m ágil. </p>
+            <p> -4 km, 4' subidas fuertes x bajadas suaves + 4' subidas suaves x bajadas fuertes. </p>
+            <p> -4 km suaves. </p>
             <audio controls>
             <source src="Audio6.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 2
-            <br> Martes mañana: 4 km calle, 2km ágiles x 2' fuertes.</h3>
-            <h3> Martes tarde: 18 km trail (con Altimetría).</h3>
-            <p> -3 km de menor a mayor. </p>
-            <p> -10 km bajas pulsaciones. </p>
-            <p> -5 km suaves. </p>
+            <br> Martes mañana: 4 km calle lo más fuerte posible.</h3>
+            <h3> Martes tarde: 15 km trail (con Altimetría).</h3>
+            <p> -3 km ágiles. </p>
+            <p> -4 km, 4' fuertes subida x 1' suave bajada. </p>
+            <p> -4 km, 20" fuertes x 20" suaves. </p>
+            <p> -4 km buenas sensaciones. </p>
             <audio controls>
             <source src="Audio7.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 3        
-            <br> Jueves: 14 km trail con subidas "series triangulares".</h3>
-            <p> -2 km de menor a mayor. </p>
-            <p> -3 km, 10 series de 300m subida ágiles x 35" pausa pasiva.  </p>
-            <p> -3 km, 10 series de 300m bajada ágiles x 30" pausa pasiva. </p>
-            <p> -4 km, 800m ágiles x 40" trote suave. </p>
-            <p> -2 km buenas sensaciones. </p>
+            <br> Jueves: 13 km trail (con Altimetría).</h3>
+            <p> -2 km fuertes. </p>
+            <p> -3 km ágiles. </p>
+            <p> -3 km, 15" fuerte x 15" suaves. </p>
+            <p> -2 km al mejor ritmo posible. </p>
+            <p> -3 km bajas pulsaciones. </p>
             <audio controls>
             <source src="Audio8.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 4        
-            <br> Viernes: 14 km trail senderos corribles.</h3>
-            <p> -2 km fuertes. </p>
-            <p> -4 km, 2' fuertes x 4' suaves x 1' ágil. </p>
-            <p> -2 km fuertes. </p>
-            <p> -3 km ágiles. </p>
-            <p> -3 km buenas sensaciones. </p>
+            <br> Viernes: 16 km trail (con Altimetría).</h3>
+            <p> -4 km fuertes. </p>
+            <p> -12 km bajas pulsaciones. </p>
             <audio controls>
             <source src="Audio9.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 5        
-            <br> Sábado: 27 km trail (con Altimetría).</h3>
-            <p> -4 km de menor a mayor. </p>
-            <p> -18 km bajas pulsaciones. </p>
-            <p> -5 km de menor a mayor. </p>
+            <br> Sábado: 29 km trail (con Altimetría).</h3>
+            <p> -3 km fuertes. </p>
+            <p> -5 km, 700m fuertes x 1' suave. </p>
+            <p> -5 km, 400m ágiles x 1'30" suave. </p>
+            <p> -8 km, 2km aumento el ritmo. </p>
+            <p> -8 km bajas pulsaciones. </p>
             <audio controls>
             <source src="Audio10.mp3" type="audio/mpeg">
         </div>
