--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
             <h1>GDE TRAIL RUNNING <br> Alumno: Paula Rios. </h1>
             </div>
         <h2>OBJETIVO MENSUAL: Mejorar la cadencia. </h2>
-        <h2>FASE: Adquisición . </h2>
-        <h2 id ="pageTitle">PRÓXIMA CARRERA UTMB Bariloche 80km</h2> 
+        <h2>FASE: Adquisición. </h2>
+        <h2 id ="pageTitle">PRÓXIMA CARRERA UTMB Bariloche 80km 21/10/2025. </h2> 
         <div id="countdown" class="countdown-llamativo"></div>        
 
-    <div class="sub-container">
-         <h4>SEMANA 32
-            <br>Objetivo semanal: Sosterner prolijos los ritmos ágiles.  </h4>
+    <div class="sub-container no-image">
+         <h4>SEMANA 34
+            <br>Objetivo semanal: Apretar en la calle.  </h4>
         <p>Entrada en calor </p>   
-        <p>4 vueltas x 13 repeticiones </p>
+        <p>4 vueltas x 12 repeticiones </p>
         <div class="image-container">  
             <video width="100%" class="responsive-video" style="margin-top: 35px;" controls>            
                 <source src="Video1.mp4" type="video/mp4">
@@ -44,52 +44,49 @@
     <div class="column-container 1">           
         <div class="column">
             <h3>Dia 1
-            <br> Lunes: 10 km calle.</h3>
-            <p> -2 km de menor a mayor. </p>
-            <p> -3 km fuertes. </p>
-            <p> -3 km, 20" fuertes x 20" suaves. </p>
-            <p> -2 km buenas sensaciones. </p>
+            <br> Lunes: 17 km trail (con Altimetría).</h3>
+            <p> -3 km de menor a mayor. </p>
+            <p> -4 km, 3' exigidos subiendo x 1' bajando ágil. </p>
+            <p> -4 km mejor tiempo posible. </p>
+            <p> -6 km bajas pulsaciones. </p>
             <audio controls>
             <source src="Audio1.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 2
-            <br> Martes: 12 km trail (con Altimetría).</h3>
-            <p> -3 km de menor a mayor. </p>
-            <p> -4 km, 5' subida exigida x 5' recuperando. </p>
+            <br> Martes: 15 km trail (con Altimetría).</h3>
+            <p> -5 km de mayor a menor. </p>
+            <p> -5 km fuertes. </p>
             <p> -5 km buenas sensaciones. </p>
             <audio controls>
             <source src="Audio2.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 3
-            <br> Jueves: 17 km trail mixto.</h3>
-            <p> -2 km ágiles por senderos bajos. </p>
-            <p> -6 km, 400m fuertes x 100 suaves inclinación. </p>
-            <p> -6 km, 2 series de 1500m bajada fuerte x calle x 1500m subida ágil. </p>
+            <br> Jueves mañana: 8 km trail senderos corribles en el mejor tiempo posible.</h3>
+            <h3> Jueves tarde: 11 km trail (con Altimetría). </h3>
+            <p> -2 km suaves. </p>
+            <p> -3 km, 5' ágiles subiendo x 1' fuerte bajando. </p>
+            <p> -3 km de menor a mayor. </p>
             <p> -3 km bajas pulsaciones. </p>
             <audio controls>
             <source src="Audio3.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 4
-            <br> Viernes: 13 km calle.</h3>
+            <br> Viernes: 12 km calle.</h3>
             <p> -2 km de menor a mayor. </p>
-            <p> -4 km, 8 series de 500m fuertes x 2' pausa pasiva. </p>
-            <p> -4 km, 5 series de 800m de menor a mayor x 2' pausa pasiva. </p>
-            <p> -3 km buenas sensaciones. </p>
+            <p> -3 km, 6 series x 500m fuertes x 25" pausa pasiva. </p>
+            <p> -2 km, 5 series x 400m de menor a mayor  x 30" pausa pasiva. </p>
+            <p> -5 km buenas sensaciones. </p>
             <audio controls>
             <source src="Audio4.mp3" type="audio/mpeg">
         </div>        
         <div class="column">
             <h3>Dia 5
-            <br> Sábado: 26 km trail (con Altimetría).</h3>
-            <p> -2 km suaves. </p>
-            <p> -4 km, 5' ágiles subiendo x 1' fuerte bajando. </p>
-            <p> -3 km de menor a mayor. </p>
-            <p> -5 km bajas pulsaciones. </p>
-            <p> -6 km de menor a mayor. </p>
-            <p> -6 km, 5' ágiles x 3' suaves. </p>
+            <br> Sábado: 25 km trail Arco.</h3>
+            <p> -25 km completar el entreno en 2:55hs con 1400+. </p>
+            <p> -45% en subida 40% bajada tecnica 15% falsos llanos. </p>
             <audio controls>
             <source src="Audio5.mp3" type="audio/mpeg">
         </div>        
@@ -97,7 +94,7 @@
 
     <div class="small-paragraph-container">
         <p> Método de recuperación </p>
-        <p> - Masaje de tensores de la fascia (2' por pierna). </p>
+        <p> - Movilidad de aductor rana (6 series x 12 repeticiones). </p>
     </div>
 
     <div class="image-container">  
@@ -111,10 +108,10 @@
     </div>
         
     <div class="sub-container">
-        <h4>SEMANA 33
-        <br>Objetivo semanal: Mantener fluidez en la cadencia. </h4>
+        <h4>SEMANA 35
+        <br>Objetivo semanal: Apretar en la calle. </h4>
         <p>Entrada en calor </p>  
-        <p> 4 vueltas x 13 repeticiones </p>
+        <p> 4 vueltas x 12 repeticiones </p>
         <div class="image-container">  
             <video width="100%" class="responsive-video" style="margin-top: 35px;" controls>            
             <source src="Video4.mp4" type="video/mp4">
@@ -132,55 +129,48 @@
     <div class="column-container 1">           
         <div class="column">
             <h3>Dia 1
-            <br> Lunes: 15 km trail mixto.</h3>
-            <p> -7 km calle, mejor tiempo posible. </p>
-            <p> -8 km Parque de Montaña "series triangulares". </p>
-            <p> -3 km fuerte por senderos bajos. </p>
-            <p> -2 km, 10 series de 200 m subiendo x 40" pausa pasiva. </p>
-            <p> -2 km, 10 series de 200 m bajando x 50" pausa pasiva. </p>
-            <p> -1 km buenas sensaciones. </p>
+            <br> Lunes: 10 km trail mixto.</h3>
+            <p> -2 km ágiles (calle). </p>
+            <p> -4 km, 1000m fuertes x 200m suaves (calle). </p>
+            <p> -2 km ágiles x senderos bajos. </p>
+            <p> -2 km sensaciones incómodas. </p>
             <audio controls>
             <source src="Audio6.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 2
-            <br> Martes mañana: 8 km calle, 4km fuertes x 4km bajas pulsaciones.</h3>
-            <h3> Martes tarde: 15 km trail senderos corribles.</h3>
-            <p> -5 km fuerte. </p>
-            <p> -5 km buenas sensaciones. </p>
-            <p> -5 km ágiles. </p>
+            <br> Martes: 13 km trail (con Altimetría).</h3>
+            <p> -2 km ágiles. </p>
+            <p> -5 km, 4' suaves x 2' ágiles. </p>
+            <p> -4 km en el mejor tiempo posible. </p>
+            <p> -2 km buenas sensaciones. </p>
             <audio controls>
             <source src="Audio7.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 3        
-            <br> Jueves: 16 km trail senderos corribles.</h3>
-            <p> -2 km fuertes x senderos bajos. </p>
-            <p> -3 km, 10 series de 300m fuertes subida x 30" pausa pasiva. </p>
-            <p> -3 km, 10 series de 300m suave bajada x 40" pausa pasiva. </p>
-            <p> -4 km ágiles. </p>
-            <p> -4 km bajas pulsaciones. </p>
+            <br> Jueves: 10 km trail senderos corribles.</h3>
+            <p> -3 km de menor a mayor. </p>
+            <p> -3 km, 500m fuertes subida x 2'ágiles. </p>
+            <p> -2 km ágiles. </p>
+            <p> -2 km fuertes. </p>
             <audio controls>
             <source src="Audio8.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 4        
-            <br> Viernes: 20 km trail mixto.</h3>
-            <p> -2 km fuertes por senderos bajos. </p>
-            <p> -4 km, 200m subida fuerte, bajada suave. </p>
-            <p> -8 km, 2 series x 2000m bajada fuerte x calle x 2000m subida ágil. </p>
-            <p> -2 km bajas pulsaciones. </p>
-            <p> -4 km fuertes. </p>
+            <br> Viernes: 10 km trail senderos corribles.</h3>
+            <p> -2 km fuertes. </p>
+            <p> -4 km, 40" ágiles x 40" suaves. </p>
+            <p> -4 km buenas sensaciones. </p>
             <audio controls>
             <source src="Audio9.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 5        
-            <br> Sábado: 28 km trail (con Altimetría) .</h3>
-            <p> -3 km de menor a mayor. </p>
-            <p> -5 km, 3' exigidos subiendo x 1' bajando ágil. </p>
-            <p> -10 km mejor tiempo posible. </p>
-            <p> -10 km bajas pulsaciones. </p>
+            <br> Sábado: 15 km trail (con Altimetría).</h3>
+            <p> -15 km completar el entreno en 2:40hs con 700+. </p>
+            <p> -Costanera- Mirador Bandurrias -Islita - Playa Catritre- Vuelta Costanera. </p>
             <audio controls>
             <source src="Audio10.mp3" type="audio/mpeg">
         </div>
@@ -188,7 +178,7 @@
 
     <div class="small-paragraph-container">
         <p> Método de recuperación </p>
-        <p> - Automasaje de popitlio (3 minutos x pierna). </p>
+        <p> - Movilidad de aductor rana (6 series x 12 repeticiones). </p>
     </div>
     
     <div class="image-container">  
