cambio html, css, js

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h2 id ="pageTitle">PRÓXIMA CARRERA UTMB Bariloche 80km 21/10/2025. </h2> 
         <div id="countdown" class="countdown-llamativo"></div>        
 
-    <div class="sub-container">
+    <div class="sub-container no-image">
          <h4>SEMANA 34
             <br>Objetivo semanal: Apretar en la calle.  </h4>
         <p>Entrada en calor </p>   
