--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
             <h1>GDE TRAIL RUNNING <br> Alumno: Paula Rios. </h1>
             </div>
         <h2>OBJETIVO MENSUAL: Mejorar la cadencia. </h2>
-        <h2>FASE: Adquisición. </h2>
-        <h2 id ="pageTitle">PRÓXIMA CARRERA UTMB Bariloche 80km 21/10/2025. </h2> 
+        <h2>FASE: Respuesta. </h2>
+        <h2 id ="pageTitle">PRÓXIMA CARRERA UTMB Bariloche 80km</h2> 
         <div id="countdown" class="countdown-llamativo"></div>        
 
-    <div class="sub-container no-image">
-         <h4>SEMANA 34
-            <br>Objetivo semanal: Apretar en la calle.  </h4>
+    <div class="sub-container">
+         <h4>SEMANA 36. Semana de carrera.
+            <br>Objetivo semanal: Diálogo positivo.  </h4>
         <p>Entrada en calor </p>   
-        <p>4 vueltas x 12 repeticiones </p>
+        <p>4 vueltas x 13 repeticiones </p>
         <div class="image-container">  
             <video width="100%" class="responsive-video" style="margin-top: 35px;" controls>            
                 <source src="Video1.mp4" type="video/mp4">
@@ -44,57 +44,51 @@
     <div class="column-container 1">           
         <div class="column">
             <h3>Dia 1
-            <br> Lunes: 17 km trail (con Altimetría).</h3>
-            <p> -3 km de menor a mayor. </p>
-            <p> -4 km, 3' exigidos subiendo x 1' bajando ágil. </p>
-            <p> -4 km mejor tiempo posible. </p>
-            <p> -6 km bajas pulsaciones. </p>
+            <br> Lunes: 7 km trail senderos corribles.</h3>
+            <p> -2 km fuerte. </p>
+            <p> -2 km ágiles. </p>
+            <p> -3 km buenas sensaciones. </p>
             <audio controls>
             <source src="Audio1.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 2
-            <br> Martes: 15 km trail (con Altimetría).</h3>
-            <p> -5 km de mayor a menor. </p>
-            <p> -5 km fuertes. </p>
-            <p> -5 km buenas sensaciones. </p>
+            <br> Martes: 5 km calle.</h3>
+            <p> -2 km ágiles. </p>
+            <p> -3 km sensaciones incómodas. </p>
             <audio controls>
             <source src="Audio2.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 3
-            <br> Jueves mañana: 8 km trail senderos corribles en el mejor tiempo posible.</h3>
-            <h3> Jueves tarde: 11 km trail (con Altimetría). </h3>
-            <p> -2 km suaves. </p>
-            <p> -3 km, 5' ágiles subiendo x 1' fuerte bajando. </p>
-            <p> -3 km de menor a mayor. </p>
-            <p> -3 km bajas pulsaciones. </p>
+            <br> Miércoles: 4 km calle.</h3>
+            <p> -2 km ágiles. </p>
+            <p> -2 km, 20" ágiles x 20" suaves. </p>
             <audio controls>
             <source src="Audio3.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 4
-            <br> Viernes: 12 km calle.</h3>
-            <p> -2 km de menor a mayor. </p>
-            <p> -3 km, 6 series x 500m fuertes x 25" pausa pasiva. </p>
-            <p> -2 km, 5 series x 400m de menor a mayor  x 30" pausa pasiva. </p>
-            <p> -5 km buenas sensaciones. </p>
+            <br> Viernes: 80 km CARRERA BARILOCHE UTMB.</h3>
             <audio controls>
             <source src="Audio4.mp3" type="audio/mpeg">
         </div>        
-        <div class="column">
+        <!-- <div class="column">
             <h3>Dia 5
-            <br> Sábado: 25 km trail Arco.</h3>
-            <p> -25 km completar el entreno en 2:55hs con 1400+. </p>
-            <p> -45% en subida 40% bajada tecnica 15% falsos llanos. </p>
+            <br> Sábado:  .</h3>
+            <p> - km . </p>
+            <p> - km . </p>
+            <p> - km . </p>
+            <p> - km . </p>
+            <p> - km . </p>
             <audio controls>
             <source src="Audio5.mp3" type="audio/mpeg">
-        </div>        
+        </div>         -->
     </div>
 
     <div class="small-paragraph-container">
         <p> Método de recuperación </p>
-        <p> - Movilidad de aductor rana (6 series x 12 repeticiones). </p>
+        <p> - Movilidad aductor rana (6 series x 12 repeticiones) </p>
     </div>
 
     <div class="image-container">  
@@ -107,11 +101,11 @@
         <canvas id="myChart-line-1"></canvas>
     </div>
         
-    <div class="sub-container">
-        <h4>SEMANA 35
-        <br>Objetivo semanal: Apretar en la calle. </h4>
+    <div class="sub-container no-image">
+        <h4>SEMANA 37. Semana post carrera.
+        <br>Objetivo semanal: Capitalizar lo ganado en el proceso. </h4>
         <p>Entrada en calor </p>  
-        <p> 4 vueltas x 12 repeticiones </p>
+        <p> 4 vueltas x 14 repeticiones </p>
         <div class="image-container">  
             <video width="100%" class="responsive-video" style="margin-top: 35px;" controls>            
             <source src="Video4.mp4" type="video/mp4">
@@ -129,48 +123,44 @@
     <div class="column-container 1">           
         <div class="column">
             <h3>Dia 1
-            <br> Lunes: 10 km trail mixto.</h3>
-            <p> -2 km ágiles (calle). </p>
-            <p> -4 km, 1000m fuertes x 200m suaves (calle). </p>
-            <p> -2 km ágiles x senderos bajos. </p>
-            <p> -2 km sensaciones incómodas. </p>
+            <br> Lunes: 18 km trail senderos corribles.</h3>
+            <p> -3 km de menor a mayor. </p>
+            <p> -4 km, 300m suaves x 700m ágiles. </p>
+            <p> -5 km en el mejor tiempo posible. </p>
+            <p> -6 km bajas pulsaciones. </p>
             <audio controls>
             <source src="Audio6.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 2
-            <br> Martes: 13 km trail (con Altimetría).</h3>
-            <p> -2 km ágiles. </p>
-            <p> -5 km, 4' suaves x 2' ágiles. </p>
-            <p> -4 km en el mejor tiempo posible. </p>
-            <p> -2 km buenas sensaciones. </p>
+            <br> Martes: 14 km trail senderos corribles.</h3>
+            <p> -2 km fuertes. </p>
+            <p> -2 km, 20" fuertes x 20" suaves. </p>
+            <p> -10 km tiene que entrar en 55'. </p>
             <audio controls>
             <source src="Audio7.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 3        
-            <br> Jueves: 10 km trail senderos corribles.</h3>
-            <p> -3 km de menor a mayor. </p>
-            <p> -3 km, 500m fuertes subida x 2'ágiles. </p>
-            <p> -2 km ágiles. </p>
-            <p> -2 km fuertes. </p>
+            <br> Jueves: 9 km trail (con Altimetría).</h3>
+            <p> -3 km ágiles. </p>
+            <p> -6 km fuertes. </p>
             <audio controls>
             <source src="Audio8.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 4        
-            <br> Viernes: 10 km trail senderos corribles.</h3>
-            <p> -2 km fuertes. </p>
-            <p> -4 km, 40" ágiles x 40" suaves. </p>
-            <p> -4 km buenas sensaciones. </p>
+            <br> Viernes: 10 km calle.</h3>
+            <p> -2 km ágiles. </p>
+            <p> -4 km sensaciones incómodas. </p>
+            <p> -4 km bajas pulsaciones. </p>
             <audio controls>
             <source src="Audio9.mp3" type="audio/mpeg">
         </div>
         <div class="column">
             <h3>Dia 5        
-            <br> Sábado: 15 km trail (con Altimetría).</h3>
-            <p> -15 km completar el entreno en 2:40hs con 700+. </p>
-            <p> -Costanera- Mirador Bandurrias -Islita - Playa Catritre- Vuelta Costanera. </p>
+            <br> Sábado: 20  km trail (con Altimetría) .</h3>
+            <p> -20 km completar el entreno en el mejor tiempo posible con 1300+. </p>
             <audio controls>
             <source src="Audio10.mp3" type="audio/mpeg">
         </div>
@@ -178,7 +168,7 @@
 
     <div class="small-paragraph-container">
         <p> Método de recuperación </p>
-        <p> - Movilidad de aductor rana (6 series x 12 repeticiones). </p>
+        <p> - Movilidad de aductor rana (6 series x 12 repeticiones).</p>
     </div>
     
     <div class="image-container">  
