--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <div id="countdown" class="countdown-llamativo"></div>         -->
 
     <div class="sub-container">
-         <h4>SEMANA 1
-            <br>Objetivo semanal: Identificar los pasos de subida.  </h4>
+         <h4>SEMANA 2
+            <br>Objetivo semanal: Buscar economizar la técnica de carrera.  </h4>
         <p>Entrada en calor </p>   
-        <p>4 vueltas x 12 repeticiones </p>
+        <p>4 vueltas x 11 repeticiones </p>
         <div class="image-container">  
             <video width="100%" class="responsive-video" style="margin-top: 35px;" controls>            
                 <source src="Video1.mp4" type="video/mp4">
@@ -44,45 +44,46 @@
     <div class="column-container 1">           
         <div class="column">
             <h3>Dia 1
-            <br> Lunes: 11 km trail senderos corribles.</h3>
-            <p> -1 km de menor a mayor por senderos bajos. </p>
-            <p> -3 km ágiles. </p>
-            <p> -4 km, 40" ágiles x 40" suaves. </p>
+            <br> Lunes: 13 km trail senderos corribles.</h3>
+            <p> -2 km de menor a mayor. </p>
+            <p> -4 km subidas ágiles + bajadas fuertes. </p>
+            <p> -4 km, 2' fuertes x 3' suaves. </p>
             <p> -3 km fuertes. </p>
         </div>
         <div class="column">
             <h3>Dia 2
-            <br> Martes maañana: 5 km calle, al mejor ritmo posible .</h3>
-            <h3> Martes tarde: 14 km trail senderos corribles. </h3>
-            <p> -2 km de mayor a menor. </p>
-            <p> -4 km, 40" subiendo x 15" bajando. </p>
-            <p> -4 km sensaciones incómodas en subida al límite. </p>
-            <p> -4 km sensaciones incómodas en bajada al límite. </p>
+            <br> Martes mañana: 4 km calle, por debajo de 5.</h3>
+            <h3> Martes tarde: 11 km trail "pasadas circulares".</h3>
+            <p> -2 km de menor a mayor. </p>
+            <p> -2 km fuerte. </p>
+            <p> -3 km, 200m fuertes x 100m ágiles 
+                <br>+ 200m fuertes x 100m ágiles. </p>
+            <p> -4 km buenas sensaciones. </p>
         </div>
         <div class="column">
             <h3>Dia 3
-            <br> Jueves: 12 km trail (con Altimetría) "series triangulares".</h3>
-            <p> -2 km ágiles. </p>
-            <p> -2 km, 10 series de 200m subida fuerte x pausa pasiva 40". </p>
-            <p> -2 km, 10 series de 200m bajada fuerte x  pausa pasiva 30". </p>
-            <p> -2 km, 10 series de 200m plano fuerte x pausa pasiva 20". </p>
-            <p> -4 km mayor a menor. </p>
+            <br> Jueves: 10 km calle "pasadas".</h3>
+            <p> -2 km fuerte. </p>
+            <p> -4 km, 5 series de 600m fuertes x 300m suave en subida. </p>
+            <p> -3 km, 4 series de 300m fuertísimo x 400m suave. </p>
+            <p> -1 km mejor ritmo posible. </p>
         </div>
         <div class="column">
             <h3>Dia 4
-            <br> Viernes: 16 km trail (con Altimetría).</h3>
-            <p> -1 km fuerte. </p>
-            <p> -2 km de mayor a menor. </p>
-            <p> -5 km, 40" ágiles x 40" treking exigido, toque donde toque. </p>
-            <p> -8 km buenas sensaciones. </p>            
+            <br> Viernes: 12 km trail "series triangulares".</h3>
+            <p> -3 km ágiles. </p>
+            <p> -2 km, 10 series de 200m subida fuerte x pausa pasiva 45". </p>
+            <p> -2 km, 10 series de 200m bajada fuerte x pausa pasiva 40". </p>
+            <p> -2 km, 10 series de 200m plano fuerte x pausa pasiva 30". </p>
+            <p> -3 km mejor ritmo posible. </p>           
         </div>        
         <div class="column">
             <h3>Dia 5
             <br> Sábado: 25 km trail (con Altimetría).</h3>
-            <p> -3 km ágiles. </p>
-            <p> -5 km, 500m fuertes x 2' suaves. </p>
-            <p> -5 km, 500m fuertísimo x 1'30" suaves. </p>
-            <p> -12 km bajas pulsaciones. </p>
+            <p> -3 km fuertes. </p>
+            <p> -7 km, 45" fuertes x 45" ágiles. </p>
+            <p> -5 km sensaciones incómodas. </p>
+            <p> -10 km buenas sensaciones. </p>
         </div>
     </div>
     <div>
@@ -91,7 +92,7 @@
     </div>
     <div class="small-paragraph-container">
         <p> Método de recuperación </p>
-        <p> - Movilidad de aductor rana (3 series x 30"). </p>
+        <p> -  Elongación de gemelo parado(12 series x 22 ejercicios x 9 descansos). </p>
     </div>
 
     <div class="image-container">  
@@ -105,8 +106,8 @@
     </div>
         
     <div class="sub-container no-image">
-        <h4>SEMANA 2
-        <br>Objetivo semanal: Economizar el gesto bajo fatiga. </h4>
+        <h4>SEMANA 4
+        <br>Objetivo semanal: Mantener técnica estable en inestabilidad. </h4>
         <p>Entrada en calor </p>  
         <p> 3 vueltas x 13 repeticiones </p>
         <div class="image-container">  
@@ -126,43 +127,34 @@
     <div class="column-container 1">           
         <div class="column">
             <h3>Dia 1
-            <br> Lunes: 13 km trail (con Altimetriía).</h3>
-            <p> -2 km de menor a mayor. </p>
-            <p> -3 km ágiles. </p>
-            <p> -5 km, 45" ágiles x 45" suaves. </p>
-            <p> -3 km fuertes. </p>
+            <br> Lunes: 15 km trail  (simulamos salida de carrera).</h3>
+            <p> -5 km fuertes. </p>
+            <p> -5 km de menor a mayor. </p>
+            <p> -5 km ágiles. </p>
         </div>
         <div class="column">
             <h3>Dia 2
-            <br> Martes mañana: 4 km calle, 2km ágiles x 2km fuertísimooo.</h3>
-            <h3> Martes tarde: 14 km trail senderos corribles.</h3>
-            <p> -3 km fuerte. </p>
-            <p> -4 km, 20" fuerte x 20" suave, senderos bajos. </p>
-            <p> -4 km subidas fuertes x bajadas controladas. </p>
-            <p> -3 km buenas sensaciones. </p>
+            <br> Martes: 14 km trail (con Altimetría).</h3>
+            <p> -3 km fuertes. </p>
+            <p> -5 km ágiles. </p>
+            <p> -6 km buenas sensaciones. </p>
         </div>
         <div class="column">
             <h3>Dia 3        
-            <br> Jueves: 13 km trail senderos corribles.</h3>
-            <p> -3 km de menor a mayor. </p>
-            <p> -10 km en el mejor tiempo posible. </p>
+            <br> Jueves: 12 km calle.</h3>
+            <p> -2 km fuertes. </p>
+            <p> -8 km, 15" ágiles x 15" suave. </p>
+            <p> -2 km fuertes. </p>
         </div>
         <div class="column">
             <h3>Dia 4        
-            <br> Viernes: 21 km trail (con Altimetría).</h3>
-            <p> -2 km salida fuerte. </p>
-            <p> -5 km, 30" agiles x 30" suave. </p>
-            <p> -2 km trekking exigido. </p>
-            <p> -12 km de menor a mayor. </p>
+            <br> Viernes: 12 km trail mixto.</h3>
+            <p> -12 km economía de carrera. </p>
         </div>
         <div class="column">
             <h3>Dia 5        
             <br> Sábado: 26 km trail (con Altimetría).</h3>
-            <p> -3 km fuerte. </p>
-            <p> -4 km, 40" subiendo x 20" bajada. </p>
-            <p> -4 km el mejor ritmo sostenido en subida. </p>
-            <p> -3 km trekking fuerte. </p>
-            <p> -12 km, 6km fuerte x 6km a buenas sensaciones. </p>             
+            <p> -26 km subir sin cortar el trote. </p>
         </div>
     </div>
     <div>
@@ -172,7 +164,7 @@
 
     <div class="small-paragraph-container">
         <p> Método de recuperación </p>
-        <p> - Masaje en gluteo (3 series x 30").</p>
+        <p> - Elongación de glúteo medio pie silla (12 series x 26 ejerciciox 9 descanso).</p>
     </div>
     
     <div class="image-container">  
